{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Actions",
            "id": "552e46a5-21c9-4a15-8ded-e6a2cecd80d7",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b4f38f58-8614-4ce0-870f-3b3e3c1db9fc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "da4c51a0-347e-4d80-b3c2-f000649f5f28",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DisplayHealthbar",
                    "type": "Button",
                    "id": "a48e32c1-3a1f-49fc-aeb0-d11b6cf3ac7b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartPause",
                    "type": "Button",
                    "id": "120a5e85-65bb-49a5-a76c-ba542dba9f8b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3a96141b-8b44-424a-9219-fef8cd14bdfb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e8795288-245a-4d6a-9af4-47d306c6cfe3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "89482074-4aee-4100-b767-86a807cfdaa7",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "74d2dd83-a416-4ba5-bc0f-e4da78839c91",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a1aeb0a8-1662-47d4-8490-df0939f362f0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "464552f1-0f45-44a7-a9eb-f0624c3743b5",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db28ac1b-323f-4118-b04f-484efe727ba7",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DisplayHealthbar",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4e3af0a-ab95-4ed1-9c34-88f84cb6b742",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Opening",
            "id": "381411d3-3bfb-4e83-917f-fe7ea4dbcb26",
            "actions": [
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "f42021f2-2825-4bde-8355-58e112ed7074",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3513f193-148a-403e-9656-2dec2a3109d4",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause",
            "id": "f7ac15f0-3aec-448f-a4d7-58655c0b856c",
            "actions": [
                {
                    "name": "StopPause",
                    "type": "Button",
                    "id": "96eba714-4648-4665-927c-61f500018a1e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoToMainMenu",
                    "type": "Button",
                    "id": "11e6eb29-86c1-45f5-b67c-ac2a12692c45",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YesButton",
                    "type": "Button",
                    "id": "2aec989c-9b1f-4c5b-ba80-6356da71ecae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NoButton",
                    "type": "Button",
                    "id": "7f9504b2-9daa-41bd-9d9c-1a46fb36e017",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoToInstructions",
                    "type": "Button",
                    "id": "6436cd9e-74f4-4ce5-a518-40403e268220",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackFromInstructions",
                    "type": "Button",
                    "id": "a5cac6dd-9ee4-4db9-9fe1-2e98b48f517b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fe69d9d6-ae99-4880-993f-d00bcf4ce0c5",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StopPause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fdc9cd79-6246-42ee-a91e-787a61831241",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6612b2a-333a-4727-94b6-1a44f51cd097",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YesButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ec7871b-e37a-411e-be0a-72164989ab72",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2952eaef-1f84-4544-aad8-ae239515c6fb",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToInstructions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2bd8830-6a0f-4968-b591-74b91739729c",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackFromInstructions",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameOver",
            "id": "bf761993-9712-4e65-a304-51d350580360",
            "actions": [
                {
                    "name": "RestartLevel",
                    "type": "Button",
                    "id": "881324f2-8ada-4af9-afa3-f714f74d0b4f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoToMainMenu",
                    "type": "Button",
                    "id": "e0aa5478-f63c-44bd-84e4-df39a9a6f1fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YesButton",
                    "type": "Button",
                    "id": "0ec61bc5-480c-436d-98d1-a034fcf3f0e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NoButton",
                    "type": "Button",
                    "id": "3de49213-d0c9-4e65-b06f-9f5869a8c7b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa176aaa-12f9-48d0-baf1-4c571b7060b4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ba749cb-b254-4b8d-903b-b045698ec0c5",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoToMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c862fdb-f582-44c0-bc89-2a6fbebb6345",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YesButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1738a59-5bd2-4b37-a086-26a9dcd02d6a",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NoButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Actions",
            "bindingGroup": "Actions",
            "devices": []
        }
    ]
}